zellij-integration-tests/tests/snapshots/search__search_input_jumps_to_a_match.snap
---
source: zellij-integration-tests/tests/search.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  +                                                                        [ SCROLL 15/19 ]
line05 NEEDLE
line06
line07
line08
line09
line10
line11
line12
line13
line14
line15
line16
line17
line18
line19
line20
line21
line22
line23
line24
line25
█ine26
 ENTERING SEARCH TERM   ENTER  When done 
